force-app/main/default/objects/Community_in_War_Location__c/Community_in_War_Location__c.object-meta.xml
<CustomObject>
    <label>Community in War Location</label>
    <nameField>
        <label>Community in War Location  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communities in War Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>