force-app/main/default/objects/Community_in_War_Location__c/fields/Community_in_war_location_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_in_war_location_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community in war location ID</label>
    <type>Text</type>
</CustomField>