force-app/main/default/objects/Community_in_War_Location__c/fields/Communtity__c.field-meta.xml
<CustomField>
    <fullName>Communtity__c</fullName>
    <label>Communtity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communities in War Location</relationshipLabel>
    <relationshipName>Communities_in_War_Location</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>