force-app/main/default/objects/Community_in_War_Location__c/fields/Kehilla_Type__c.field-meta.xml
<CustomField>
    <fullName>Kehilla_Type__c</fullName>
    <formula>TEXT(Communtity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kehilla Type</label>
    <type>Text</type>
</CustomField>