force-app/main/default/objects/Community_in_War_Location__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>Communtity__r.Id + TEXT(War_Location__r.Pikud_Haoref_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CommuntityID +&quot;%&quot;+  WarLocationID</inlineHelpText>
    <label>Key</label>
    <type>Text</type>
</CustomField>