force-app/main/default/objects/Community_in_War_Location__c/fields/Name_txt__c.field-meta.xml
<CustomField>
    <fullName>Name_txt__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name txt</label>
    <type>Text</type>
</CustomField>