force-app/main/default/objects/Community_in_War_Location__c/fields/Number_of_people__c.field-meta.xml
<CustomField>
    <fullName>Number_of_people__c</fullName>
    <label>Number of people</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>