force-app/main/default/objects/Community_in_War_Location__c/fields/War_Location__c.field-meta.xml
<CustomField>
    <fullName>War_Location__c</fullName>
    <label>War Location</label>
    <referenceTo>War_location__c</referenceTo>
    <relationshipLabel>Communities in War Location</relationshipLabel>
    <relationshipName>Communities_in_War_Location</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>