force-app/main/default/objects/Community_in_War_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Communtity__c</columns>
    <columns>War_Location__c</columns>
    <columns>Number_of_people__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>S__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>